--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		<div class="toppart debuggrey">
 			<div class="fullscreenvid">
-				<video width="320" height="240" controls>
+				<video id="mainvideo" controls>
 				  <source src="video/video1.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 				</video>
