--- a/index.html
+++ b/index.html
@@ -23,19 +23,56 @@
 
 
 
-		<div class="toppart debuggrey">
+		<div class="toppart">
 			<div class="fullscreenvid">
 				<video id="mainvideo" controls>
-				  <source src="video/video1.mp4" type="video/mp4">
+				  <source id="mainvidsrc" src="video/video1.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 				</video>
 			</div>
-			<div class="infoside debugorgange">
-				b
+			<div class="infoside">
+				<img src="img/videofare.png" id="videofare" />
 			</div>
 		</div>
-		<div class="bottompart debugteal">
-		a
+		<div class="bottompart">
+		    <div class="square">
+
+        </div>
+        <div class="square">
+
+        </div>
+        <div class="square">
+
+        </div>
+        <div class="square">
+
+        </div>
+        <div class="square">
+
+        </div>
+        <div class="square">
+
+        </div>
+        <div class="square">
+
+        </div>
+        <div class="square">
+
+        </div>
+        <div class="square">
+
+        </div>
+        <div class="square">
+
+        </div>
+        <div class="square">
+
+        </div>
+        <div class="square">
+
+        </div>
+
+
 		</div>
 
 
