Adds stock videos to fill up thumbnails and styles more

--- a/index.html
+++ b/index.html
@@ -36,19 +36,34 @@
 		</div>
 		<div class="bottompart">
 		    <div class="square">
-
+          <video class="thumbvideo">
+            <source id="video1" src="video/stockvid1.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         </div>
         <div class="square">
-
+          <video class="thumbvideo">
+            <source id="video2" src="video/stockvid2.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         </div>
         <div class="square">
-
+          <video class="thumbvideo">
+            <source id="video3" src="video/stockvid3.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         </div>
         <div class="square">
-
+          <video class="thumbvideo">
+            <source id="video4" src="video/stockvid4.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         </div>
         <div class="square">
-
+          <video class="thumbvideo">
+            <source id="video5" src="video/stockvid5.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         </div>
         <div class="square">
 
