Adds vanilla javascript to swap videos dynamically and styles further

--- a/index.html
+++ b/index.html
@@ -35,56 +35,77 @@
 			</div>
 		</div>
 		<div class="bottompart">
+      <div class="square">
+          <video class="thumbvideo">
+            <source id="video1" src="video/video1.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
+      </div>
 		    <div class="square">
           <video class="thumbvideo">
-            <source id="video1" src="video/stockvid1.mp4" type="video/mp4">
+            <source id="video2" src="video/video2.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
         </div>
         <div class="square">
           <video class="thumbvideo">
-            <source id="video2" src="video/stockvid2.mp4" type="video/mp4">
+            <source id="video3" src="video/video3.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
         </div>
         <div class="square">
           <video class="thumbvideo">
-            <source id="video3" src="video/stockvid3.mp4" type="video/mp4">
+            <source id="video4" src="video/video4.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
         </div>
         <div class="square">
           <video class="thumbvideo">
-            <source id="video4" src="video/stockvid4.mp4" type="video/mp4">
+            <source id="video5" src="video/video5.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
         </div>
         <div class="square">
           <video class="thumbvideo">
-            <source id="video5" src="video/stockvid5.mp4" type="video/mp4">
+            <source id="video6" src="video/video6.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
         </div>
         <div class="square">
-
+          <video class="thumbvideo">
+            <source id="video7" src="video/video7.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         </div>
         <div class="square">
-
+          <video class="thumbvideo">
+            <source id="video8" src="video/video8.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         </div>
         <div class="square">
-
+          <video class="thumbvideo">
+            <source id="video9" src="video/video9.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         </div>
         <div class="square">
-
+          <video class="thumbvideo">
+            <source id="video10" src="video/video10.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         </div>
         <div class="square">
-
+          <video class="thumbvideo">
+            <source id="video11" src="video/video11.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         </div>
         <div class="square">
-
-        </div>
-        <div class="square">
-
+          <video class="thumbvideo">
+            <source id="video12" src="video/video12.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         </div>
 
 
