Removes duplicate video and removes empty box frames

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
           Your browser does not support the video tag.
           </video>
         </div>
-        <div class="square">
+        <!-- <div class="square">
           <video class="thumbvideo">
             <source id="video3" src="video/video3.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
-        </div>
+        </div> -->
         <div class="square">
           <video class="thumbvideo">
             <source id="video4" src="video/video4.mp4" type="video/mp4">
@@ -77,36 +77,36 @@
           Your browser does not support the video tag.
           </video>
         </div>
-        <div class="square">
+        <!-- <div class="square">
           <video class="thumbvideo">
             <source id="video8" src="video/video8.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
-        </div>
+        </div> -->
         <div class="square">
           <video class="thumbvideo">
             <source id="video9" src="video/video9.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
         </div>
-        <div class="square">
+        <!-- <div class="square">
           <video class="thumbvideo">
             <source id="video10" src="video/video10.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
-        </div>
-        <div class="square">
+        </div> -->
+        <!-- <div class="square">
           <video class="thumbvideo">
             <source id="video11" src="video/video11.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
-        </div>
-        <div class="square">
+        </div> -->
+        <!-- <div class="square">
           <video class="thumbvideo">
             <source id="video12" src="video/video12.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
-        </div>
+        </div> -->
 
 
 		</div>
